# gen

./: .clang-format  .gitignore  CMakeLists.txt
include/: CMakeLists.txt
shaders/: CMakeLists.txt  shader.frag  shader.vert
src/: CMakeLists.txt  main.cpp
src/geometry/: circle.h  dewall.h  gen.h  inter.h  vertex.h
src/vk/: vk_debug.cpp  vk_debug.h  vk_engine.h  vk_types.h
